Collapse-Button fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,77 +7,83 @@ background-color: #00bb00aa !important;
 }
 
 router-outlet {
-  width: ;
+  width: 100%;
 }
 
-#arrowAnim {
-  z-index: 999;
+button {
+bottom: 0;
+  left: 0;
+  width: 3em;
+  height: 3em;
+  margin-bottom: 0;
+  margin-left: 0;
+    z-index: 999;
+    position: absolute;
+}
+
+.arrow {
+  width: .75em;
+  height: .75em;
+}
+.arrowRightSliding {
   position: absolute;
-  bottom: .75em;
-  left: 1em;
+  -webkit-animation: slideRight 2.5s linear infinite;
+  animation: slideRight 2.5s linear infinite;
 }
-
-.arrow-left {
-  width: .5em;
-  height: .5em;
-}
-
-.arrow-right {
-  width: 5vw;
-  height: 5vw;
-  border: 2.5vw solid;
-  transform: rotate(45deg);
-}
-
-.arrowSliding {
+.initRight {
   position: absolute;
-  -webkit-animation: slide 3s linear infinite;
-  animation: slide 3s linear infinite;
-}
-.delay0 {
-  opacity: 0;
-  position: absolute;
-  -webkit-animation: slideInit 2s linear normal;
-  animation: slideInit 2s linear normal;
-  border: 0.5vw solid;
-  transform: rotate(-45deg);
+  animation: slideRightInit 2s linear normal;
+  -webkit-animation: slideRightInit 2s linear normal;
+  border: 0.5em solid;
   border-color: #00ff0088 transparent transparent #00ff0088;
+  opacity: 0;
+}
+
+.arrowLeftSliding {
+  position: absolute;
+  -webkit-animation: slideLeft 2.5s linear infinite;
+  animation: slideLeft 2.5s linear infinite;
+}
+.initLeft {
+  position: absolute;
+  animation: slideLeftInit 2s linear normal;
+  -webkit-animation: slideLeftInit 2s linear normal;
+  border: 0.5em solid;
+  border-color: #00ff0088 transparent transparent #00ff0088;
+  opacity: 0;
 }
 
 .delay1 {
-  opacity: 0;
-  border: 0.5vw solid;
-  transform: rotate(-45deg);
-  border-color: #1a1a1a88 transparent transparent #1a1a1a88;
-  -webkit-animation-delay: 1s;
   animation-delay: 1s;
+  -webkit-animation-delay: 1s;
+  border: 0.5em solid;
+  border-color: #1a1a1a88 transparent transparent #1a1a1a88;
+  opacity: 0;
 }
 .delay2 {
-  opacity: 0;
-  border: 0.5vw solid;
-  transform: rotate(-45deg);
-  border-color: #00ff0088 transparent transparent #00ff0088;
-  -webkit-animation-delay: 1.5s;
   animation-delay: 1.5;
+  -webkit-animation-delay: 1.5s;
+  border: 0.5em solid;
+  border-color: #00ff0088 transparent transparent #00ff0088;
+  opacity: 0;
 }
 
 .delay3 {
-  opacity: 0;
-  border: 0.5vw solid;
-  transform: rotate(-45deg);
-  border-color: #1a1a1a88 transparent transparent #1a1a1a88;
-  -webkit-animation-delay: 2s;
   animation-delay: 2s;
+  -webkit-animation-delay: 2s;
+  border: 0.5em solid;
+  border-color: #1a1a1a88 transparent transparent #1a1a1a88;
+  opacity: 0;
 }
 
-@-webkit-keyframes slide {
+@keyframes slideLeft {
   0% {
     opacity: 0;
-    transform: translateX(3vw), rotate(-45deg);
+    transform: translateX(5em) translateY(-1em) rotate(-45deg);
   }
   20% {
     opacity: 0;
-    transform: translateX(2vw), rotate(-45deg);
+    transform: translateX(4em) translateY(-1em) rotate(-45deg);
   }
   40% {
     opacity: 0;
@@ -87,21 +93,22 @@ router-outlet {
   }
   80% {
     opacity: 1;
-    transform: translateX(-2vw), rotate(-45deg);
+    transform: translateX(0em) translateY(-1em) rotate(-45deg);
   }
   100% {
     opacity: 0;
-    transform: translateX(-3vw), rotate(-45deg);
+    transform: translateX(-1em) translateY(-1em) rotate(-45deg);
   }
 }
-@keyframes slide {
+
+@-webkit-keyframes slideLeft {
   0% {
     opacity: 0;
-    transform: translateX(3vw) rotate(-45deg);
+    transform: translateX(5em) translateY(-1em) rotate(-45deg);
   }
   20% {
     opacity: 0;
-    transform: translateX(2vw) rotate(-45deg);
+    transform: translateX(4em) translateY(-1em) rotate(-45deg);
   }
   40% {
     opacity: 0;
@@ -111,55 +118,142 @@ router-outlet {
   }
   80% {
     opacity: 1;
-    transform: translateX(-2vw) rotate(-45deg);
+    transform: translateX(0em) translateY(-1em) rotate(-45deg);
   }
   100% {
     opacity: 0;
-    transform: translateX(-3vw) rotate(-45deg);
+    transform: translateX(-1em) translateY(-1em) rotate(-45deg);
+  }
+}
+@keyframes slideRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-5.75em) translateY(-1em) translateY(-1em) rotate(135deg);
+  }
+  20% {
+    opacity: 0;
+    transform: translateX(-4.75em) translateY(-1em) rotate(135deg);
+  }
+  40% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(0.75em) translateY(-1em)  rotate(135deg);
+  }
+}
+@-webkit-keyframes slideRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-5.75em) translateY(-1em) translateY(-1em) rotate(135deg);
+  }
+  20% {
+    opacity: 0;
+    transform: translateX(-4.75em) translateY(-1em) rotate(135deg);
+  }
+  40% {
+    opacity: 0;
+  }
+  60% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(0.75em) translateY(-1em)  rotate(135deg);
+  }
+}
+@-webkit-keyframes slideLeftInit {
+  0% {
+    opacity: 0;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  20% {
+    opacity: 1;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  40% {
+    opacity: 0;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  80% {
+    opacity: 1;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+}
+@keyframes slideLeftInit {
+  0% {
+    opacity: 0;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  20% {
+    opacity: 1;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  40% {
+    opacity: 0;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  80% {
+    opacity: 1;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(.5em) translateY(-1em) rotate(-45deg);
   }
 }
 
-@-webkit-keyframes slideInit {
+@-webkit-keyframes slideRightInit {
   0% {
     opacity: 0;
-    transform: rotate(-45deg);
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);
   }
   20% {
     opacity: 1;
-    transform: rotate(-45deg);
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);
   }
   40% {
     opacity: 0;
-    transform: rotate(-45deg);
-  }
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);  }
   80% {
     opacity: 1;
-    transform: rotate(-45deg);
-  }
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);  }
   100% {
     opacity: 0;
-    transform: rotate(-45deg);
-  }
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);  }
 }
-@keyframes slideInit {
+
+@keyframes slideRightInit {
   0% {
     opacity: 0;
-    transform: rotate(-45deg);
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);
   }
   20% {
     opacity: 1;
-    transform: rotate(-45deg);
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);
   }
   40% {
     opacity: 0;
-    transform: rotate(-45deg);
-  }
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);  }
   80% {
     opacity: 1;
-    transform: rotate(-45deg);
-  }
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);  }
   100% {
     opacity: 0;
-    transform: rotate(-45deg);
-  }
+    transform: translateX(-0.75em) translateY(-1em) rotate(135deg);  }
 }
